@@ -1,3 +1,9 @@
+Sat May 28 20:34:19 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* test/test_unicode_normalize.rb: Add test to check for availability of
+	  Unicode data file; refactoring; fix an error with tests for destructive
+	  method (unicode_normalize!).
+
 Sat May 28 19:08:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* test/ruby/enc/test_case_comprehensive.rb: Add error messages to tests
